tweaked photo and formatting
changed header photo & formatted index

--- a/cyber-security/index.html
+++ b/cyber-security/index.html
@@ -81,7 +81,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Master of Science in</div>
+                <div class="intro-lead-in">It’s time to consider your Master of Science in</div>
                 <div class="intro-heading">Cyber Security Policy & Governance</div>
                 <a href="#about" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
@@ -92,38 +92,87 @@
     <section id="about">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Data Needs Defenders</h2>
+             <div class="row text-center">
+                    <h2 class="section-heading">Privacy Needs Defenders</h2>
                     <h3 class="section-subheading text-muted">Are you ready to become one?</h3>
-                </div>
             </div>
-            <div class="row text-left">
-                <div class="col-md-4">
+            </div>
+            </div>
+
+                <!-- The Circle Icons & Headers -->
+           <div class="container">
+           <div class="row">
+                    <div class="col-md-4">
+                    <div class="row text-center">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-exclamation-triangle fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Today's Challenge</h4>
-                    <p class="text-muted">Cybersecurity has become a strategic priority for private industry and government and there is an increasing need for a holistic approac to the challenges it poses. However, in today’s market, there are few professionals with the technical, analytical, communication and managerial skills to develop and implement a unified strategy to address the constant and varying cyber threats faced by private industry and government.</p>
-                </div>
-                <div class="col-md-4">
+            </div>
+            </div>
+                    <div class="col-md-4">
+                    <div class="row text-center">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">The Solutions</h4>
-                    <p class="text-muted">The Master of Science in Cybersecurity Policy & Governance at Boston College provides students with the skills necessary to manage the critical and emerging cybersecurity issues faced by private industry and government. Taught by industry leaders and practitioners, students will learn hands-on how to identify, assess, and manage cyber risk, and to develop and implement a proactive comprehensive cybersecurity strategy to effectively defend mitigate, and recover from a cyber-attack. The program will prepare students to bridge the communication gap between IT security professionals and key business stakeholders, as well as to lead and design a business case for investment to senior executives, Boards of Directors, and government officials. Students will learn to cultivate strategies based on ethical principles informed by company policies and government regulations to protect against and respond to cyber threats. the program emphasizes leadership, critical thinking, analytic problem solving, and strong communication skills to prepare students to meet and respond to the varying issues presented by the rapidly changing cyber ecosystem.</p>
-                </div>
-                <div class="col-md-4">
+            </div>
+            </div>
+                    <div class="col-md-4">
+                    <div class="row text-center">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-bank fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">The Program</h4>
-                    <p class="text-muted">The Master of Science in Cybersecurity Policy & Governance is a ten-course degree program. The program can be completed in an 18-month period, but is designed to be flexible in meeting the needs of our students. The program is intended for business and government professionals, managers, practitioners, IT professionals, and individuals seeking skills in cybersecurity strategy, leadership, management, and policy to begin or advance careers in private industry or government. As a working professional, you may wish to attend full- or part-time. Applications are accepted on a rolling basis for admission in the fall or spring semesters. All undergraduate majors are welcome. Financial aid and career assistance are available.</p>
-                </div>
+                    <h4 class="service-heading">Our Program</h4>
+                    </div>
+                    </div>
             </div>
+            </div>
+
+             <!-- The copy under circles/headers -->
+           <div class="container">
+           <div class="row">
+                    <div class="col-md-4">
+                    <div class="row text-left">
+                    <p class="text-muted">Few professionals in private industry and government have the necessary skills to develop and implement a holistic approach to cybersecurity.
+                    </p>
+                    </div>
+                    </div>
+                    
+                    <div class="col-md-4">
+                    <p class="text-left">
+                    <p class="text-muted">Our MS in Cybersecurity Policy & Governance prepares practitioners to:
+                    <ul class="text-muted">
+                        <li>Manage critical and emerging cybersecurity issues</li>
+                        <li> Identify, assess, and manage cyber risk</li>
+                        <li> Implement proactive cybersecurity strategies to effectively defend, mitigate, and recover</li>
+                        <li> Design, develop, and make the business case for cybersecurity investment to senior executives,
+                        <li> Boards of Directors, and government officials.</li>
+                        <li> Bridge the communication gap between IT security professionals and key business stakeholders</li>
+                        <li> Promote strategies based on sound moral and ethical principles</li>
+                    </p>
+                    </p>
+                </div>
+           <div class="col-md-4">
+                <p class="text-muted">
+                <p class="text-left">
+                <ul class="text-muted">
+                <li>Taught by industry leaders and practitioners </li>
+                <li>10 course degree program </li>
+                <li>Flexible: Attend full or part time </li>
+                <li>Can complete in 18 months </li>
+                <li>Applications accepted for Fall or Spring admission </li>
+                </ul>
+                </p>
+                </p>
         </div>
+        </div>
+        </div>
+
+
     </section>
 
 
@@ -135,7 +184,6 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">One of our staff will respond to you as soon as possible.</h3>
                 </div>
             </div>
             <div class="row">
