--- a/cyber-security/index.html
+++ b/cyber-security/index.html
@@ -232,28 +232,29 @@
     <!-- The FOOTER  -->
 
     <footer>
-        <style>
-            background-color: #99002D;
-            /* red */
-        </style>
         <div class="panel-footer">
-
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 copyright-container">
                     <span class="copyright">Copyright &copy; Boston College 2015</span>
                 </div>
-                <div class="col-md-4">
+                <!--<div class="col-md-4">
                     <ul class="list-inline social-buttons">
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
-                </div>
-                <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Use</a></li>
+                </div>-->
+                <div class="col-md-offset-4 col-md-4">
+                    <ul class="list-inline quicklinks" style="vertical-align:middle">
+                        <li><a href="http://www.bc.edu/accessibility">Accessibility</a></li>
+                        <li>|</li>
+                        <li><a href="http://www.bc.edu/gn-contact">Contact</a></li>
+                        <li>|</li>
+                        <li><a href="http://www.bc.edu/gn-feedback">Feedback</a></li>
                     </ul>
+                    <span>
+                        © 2015 The Trustees of Boston College. <a href="http://www.bc.edu/gn-legal">Legal</a>
+                    </span>
                 </div>
             </div>
         </div>
