--- a/cyber-security/index.html
+++ b/cyber-security/index.html
@@ -75,6 +75,9 @@
             <div class="intro-text">
                 <div class="intro-lead-in">It’s time to consider your Master of Science in</div>
                 <div class="intro-heading">Cyber Security Policy & Governance</div>
+                <div class="intro-examples">
+                    <div>Be a Cyber <strong class="swap">manager</strong></div>
+                </div>
                 <a href="#about" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
@@ -269,6 +272,7 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/agency.js"></script>
+    <script src="js/bccyber.js"></script>
 
 </body>
 
